# npm1300-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: ci.yml
.github/workflows/: main.yml
src/: buck.rs  charger.rs  fmt.rs  lib.rs  registers.rs  sysreg.rs
